Loads of JS & dark mode fixes

--- a/_includes/beatrice/02-molecules/01-menus/_main-menu.scss
+++ b/_includes/beatrice/02-molecules/01-menus/_main-menu.scss
@@ -11,7 +11,7 @@
   }
   .menu {
     list-style: none;
-    margin: 2rem 0 0 1rem;
+    margin: 2rem 1rem;
     padding: 0;
     @media (min-width: $bp--large) {
       height: 100%;
@@ -19,20 +19,30 @@
     }
   }
   &-item {
+    border-bottom: solid 1px $color-gray-400;
     display: block;
+    margin-bottom: 0.75rem;
+    padding-bottom: 0.75rem;
     @media (min-width: $bp--large) {
+      border-bottom: none;
       display: inline-block;
       height: 100%;
+      margin-bottom: 0;
+      padding-bottom: 0;;
     }
 
   }
   a {
     display: block;
+    font-size: 1.5rem;
     font-weight: 400;
     font-stretch: 85%;
+    line-height: 1.25;
     padding: 0.15rem 0.5rem 0.2rem;
     @media (min-width: $bp--large) {
       display: flex;
+      font-size: 1.25rem;
+      line-height: 2rem;
       height: 100%;
       align-items: center;
     }
