--- a/_includes/beatrice/03-organisms/06-content-section/_content-section.scss
+++ b/_includes/beatrice/03-organisms/06-content-section/_content-section.scss
@@ -44,6 +44,7 @@
     z-index: 1;
     @media (prefers-color-scheme:dark) {
       background-color: rgba(0,0,0,0.75);
+      padding-bottom: 0;
     }
    &::before {
       display: block;
